# archidekt-mcp-server

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/: .docs-manifest.json  api-reference.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  index.md  llm-context.md  troubleshooting.md
src/archidekt_commander_mcp/: __init__.py  __main__.py  app_factory.py  clients.py  config.py  filtering.py  mcp_auth.py  models.py  runtime_cli.py  server.py  server_contracts.py  webui.py
src/archidekt_commander_mcp/app/: __init__.py  factory.py  health.py  http_helpers.py  oauth.py  proxy.py  resources.py  routes.py  service_provider.py  tools.py
src/archidekt_commander_mcp/auth/: __init__.py  pages.py  provider.py  records.py
src/archidekt_commander_mcp/integrations/: __init__.py  authenticated.py  collection_cache.py  http_base.py  public_collection.py  request_gate.py  scryfall.py  serialization.py
src/archidekt_commander_mcp/schemas/: __init__.py  accounts.py  cards.py  collections.py  decks.py  search.py
src/archidekt_commander_mcp/services/: __init__.py  account_identity.py  account_resolution.py  authenticated_cache.py  card_search.py  deck_usage.py  deckbuilding.py  personal_decks.py  serialization.py  snapshot_cache.py  value_helpers.py
src/archidekt_commander_mcp/ui/: home.py
src/archidekt_commander_mcp/ui/templates/: home.html
tests/: support.py  test_filters.py  test_server.py
