[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archidekt-commander-mcp"
version = "0.2.0"
description = "Stateless MCP server with a Web UI for Commander deckbuilding on public Archidekt collections and Scryfall."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = [
  "mcp[cli]>=1.27.0,<2",
  "httpx>=0.28,<1",
  "pydantic>=2.12,<3",
  "redis>=5.2,<6",
  "starlette>=0.37,<2",
  "uvicorn>=0.30,<1",
]

[project.scripts]
archidekt-commander-mcp = "archidekt_commander_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
